# RepoScribe-AI

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260517_0001_initial_schema.py
apps/api/app/: main.py
apps/api/app/ai/: service.py
apps/api/app/architecture/: service.py
apps/api/app/core/: __init__.py  config.py  database.py  errors.py  logging.py  middleware.py  redis.py
apps/api/app/indexing/: service.py  state.py
apps/api/app/ingestion/: __init__.py  metadata_extractor.py  repository_loader.py  service.py  url_parser.py
apps/api/app/models/: __init__.py  base.py  repository.py
apps/api/app/parsers/: __init__.py  ast_parser.py  base.py  go_parser.py  java_parser.py  javascript_parser.py  models.py  normalizer.py  python_parser.py  registry.py  typescript_parser.py
apps/api/app/schemas/: health.py  repository.py
apps/api/app/services/: health_service.py  repository_service.py
apps/api/app/vector/: __init__.py  chunking.py  embedding_service.py  qdrant_store.py  service.py  sparse.py
apps/api/app/webhooks/: github.py
apps/api/app/workers/: celery_app.py  process_repository_cli.py  processor.py  tasks.py
apps/api/tests/: test_ai_service.py  test_architecture_service.py  test_chunking.py  test_github_webhook.py  test_health.py  test_incremental_indexing.py  test_ingestion_utils.py  test_vector_service.py
apps/queue/: package.json
(+16 files in other folders)
